<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvWelcomeText">Welcome to EventFinder! Click the buttons below to search for events.</string>
    <string name="btnSearchArtist">Search artist</string>
    <string name="btnShowNearbyEvents">Show nearby events</string>
    <string name="btnSearchCity">Search events in city</string>
    <string name="tvArtistSearch">Enter the artists name and click Search to list all coming events with that artist.</string>
    <string name="hintSearchArtist">Artist</string>
    <string name="btnSearch">Search</string>
    <string name="btnShowOnMap">Show events on map</string>
    <string name="tvCitySearchText">Going to travel somewhere? Enter city, date and category below to find out what\'s happening in that city.</string>
    <string name="hintCity">City</string>
    <string name="hintDate">Date</string>
    <string name="toastEnterArtistName">Please enter a name</string>
    <string name="lvTitleText">Title:</string>
    <string name="lvCityText">City:</string>
    <string name="lvCountryText">Country:</string>
    <string name="lvDateText">Date:</string>
    <string name="lvVenueName">Venue name:</string>
    <string name="lvVenueAddress">Venue address:</string>
    <string name="alertDialogClose">Close</string>
    <string name="eventInfoText">Event information</string>
    <string name="progDialogLoading">Loading...</string>
    <string name="noDescriptionFound">No description available</string>

</resources>
