<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="se.mah.ad0025.apiprojekt.MenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/tvWelcomeText" />

    <Button
        android:id="@+id/btnSearchByArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/btnSearchArtist"/>

    <Button
        android:id="@+id/btnShowNearbyEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/btnShowNearbyEvents"/>

    <Button
        android:id="@+id/btnSearchCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSearchCity"/>
</LinearLayout>
