<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.mah.ad0025.apiprojekt.SearchArtistFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:text="@string/tvArtistSearch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/hintSearchArtist"/>

        <Button
            android:id="@+id/btnSearchArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSearch"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvArtists"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </ListView>

    <Button
        android:id="@+id/btnShowOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnShowOnMap"/>
</LinearLayout>
