<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.mah.ad0025.apiprojekt.SearchCityFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:text="@string/tvCitySearchText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:layout_weight="2"
            android:hint="@string/hintCity"/>

        <EditText
            android:id="@+id/etDate"
            android:inputType="date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintDate"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <Button
        android:id="@+id/btnSearchCityDateCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSearch"/>

    <ListView
        android:id="@+id/lvEvents"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>
